<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/yellow"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        android:text="@string/buttonZero"
        android:textColor="@color/white"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor6"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor5"
        app:layout_constraintVertical_bias="0.0"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonComma"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor6"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor5"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEqual"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor6"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor5"
        android:textColor="@color/teal_700"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonPlus"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor5"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor4"
        android:textColor="@color/teal_700"
        android:background="@color/white"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonOne"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor5"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor4"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonTwo"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor5"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toEndOf="@id/gVer2"
        app:layout_constraintTop_toBottomOf="@id/gHor4"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonThree"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor5"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor4"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonFour"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor3"
        android:textColor="@color/white"
        android:background="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonFive"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toEndOf="@id/gVer2"
        app:layout_constraintTop_toBottomOf="@id/gHor3"
        android:textColor="@color/white"
        android:background="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSix"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor3"
        android:textColor="@color/white"
        android:background="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonMinus"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor3"
        android:textColor="@color/teal_700"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSeven"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor2"
        android:textColor="@color/white"
        android:background="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEight"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toEndOf="@id/gVer2"
        app:layout_constraintTop_toBottomOf="@id/gHor2"
        android:textColor="@color/white"
        android:background="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonNine"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor2"
        android:textColor="@color/white"
        android:background="@color/teal_700"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonMult"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor2"
        android:textColor="@color/teal_700"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:text="@string/buttonClear"
        android:textColor="@color/teal_700"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/gHor2"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonDiv"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/gHor2"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor1"
        android:textColor="@color/teal_700"
        android:background="@color/white"/>
    
    <View
        android:id="@+id/separator"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/gHor6"
        app:layout_constraintEnd_toEndOf="@id/gVer4"
        app:layout_constraintStart_toStartOf="@id/gVer4"
        app:layout_constraintTop_toTopOf="@id/gHor1"


        ></View>

</androidx.constraintlayout.widget.ConstraintLayout>